--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="Eldwin">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/index-styles.css">
         <title>Eclipsara</title>
     </head>
     <body>
@@ -122,6 +122,6 @@
         <footer>
             <div class="footer-content">&copy; 2023 Eclipsara. All rights reserved. </div>
         </footer>
-        <script src="script.js"></script>
+        <script src="js/index-script.js"></script>
     </body>
 </html>
